# software-checker-mcp

./: .gitignore  README.md  pyproject.toml  release-notes-v0.0.1.md
src/software_checker_mcp/: git-release-notes-generator-prompt_v1.md  main.py  software-security-check.md
